--- a/package.json
+++ b/package.json
@@ -3,24 +3,35 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.ts",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "axios": "^1.6.8",
+    "dotenv": "^16.4.5",
+    "exa-js": "^1.0.12",
+    "iconoir-react": "^7.7.0",
+    "next": "14.2.3",
+    "openai": "^4.40.0",
+    "pongo-typescript": "^1.1.2",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "react-markdown": "^9.0.1",
+    "remark-gfm": "^4.0.0",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "typescript": "^5"
   }
 }
