--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
-    "remark-gfm": "^4.0.0",
-    "socket.io": "^4.7.5",
-    "socket.io-client": "^4.7.5"
+    "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
