--- a/package.json
+++ b/package.json
@@ -1,39 +1,44 @@
 {
-  "name": "simplicity",
+  "name": "simplicity-2",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "ts-node server.ts",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
   "dependencies": {
-    "@tailwindcss/line-clamp": "^0.4.4",
-    "axios": "^1.6.8",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "exa-js": "^1.0.12",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
     "iconoir-react": "^7.7.0",
-    "next": "14.2.3",
-    "openai": "^4.40.0",
-    "pongo-typescript": "^1.1.2",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
+    "react-scripts": "5.0.1",
     "remark-gfm": "^4.0.0",
-    "socket.io": "^4.7.5",
-    "socket.io-client": "^4.7.5"
+    "web-vitals": "^2.1.4"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5"
+    "tailwindcss": "^3.4.3"
   }
 }
