--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "remark-gfm": "^4.0.0",
     "web-vitals": "^2.1.4"
   },
